--- a/AmDataVizDemo/AmDataVizDemo.csproj
+++ b/AmDataVizDemo/AmDataVizDemo.csproj
@@ -7,12 +7,22 @@
   <ItemGroup>
     <None Remove="Newtonsoft.Json" />
     <None Remove="Services\" />
+    <None Remove="Microsoft.ML" />
+    <None Remove="Microsoft.ML.TimeSeries" />
+    <None Remove="Microsoft.Data.Analysis" />
+    <None Remove="XPlot.Plotly" />
+    <None Remove="Models\Forecast\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Microsoft.ML" Version="1.6.0" />
+    <PackageReference Include="Microsoft.ML.TimeSeries" Version="1.6.0" />
+    <PackageReference Include="Microsoft.Data.Analysis" Version="0.18.0" />
+    <PackageReference Include="XPlot.Plotly" Version="4.0.3" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
+    <Folder Include="Models\Forecast\" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\shiny\index.html" />
